0032769: Data Exchange - Slow processing of very large STEP file

- Set on optimized memory manager by default